[gd_scene load_steps=12 format=3 uid="uid://wwj3u35yvhmi"]

[ext_resource type="Script" path="res://scenes/UI/key_controls.gd" id="1_7awgc"]
[ext_resource type="Texture2D" uid="uid://s3bn3lio4p6k" path="res://assets/ui/keyboard/Tilemaps/pixel_keys_x16_white.png" id="1_yo1rt"]
[ext_resource type="FontFile" uid="uid://bhiiomegcynfe" path="res://assets/font/Squares.ttf" id="2_4gdgl"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_clg3o"]
texture = ExtResource("1_yo1rt")
0:0/0 = 0
1:0/0 = 0
2:0/0 = 0
3:0/0 = 0
4:0/0 = 0
5:0/0 = 0
6:0/0 = 0
7:0/0 = 0
8:0/0 = 0
9:0/0 = 0
10:0/0 = 0
11:0/0 = 0
12:0/0 = 0
13:0/0 = 0
14:0/0 = 0
15:0/0 = 0
16:0/0 = 0
17:0/0 = 0
18:0/0 = 0
19:0/0 = 0
0:1/0 = 0
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
6:1/0 = 0
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
14:1/0 = 0
15:1/0 = 0
16:1/0 = 0
17:1/0 = 0
18:1/0 = 0
19:1/0 = 0
0:2/0 = 0
1:2/0 = 0
2:2/0 = 0
3:2/0 = 0
4:2/0 = 0
5:2/0 = 0
6:2/0 = 0
7:2/0 = 0
8:2/0 = 0
9:2/0 = 0
10:2/0 = 0
11:2/0 = 0
12:2/0 = 0
13:2/0 = 0
14:2/0 = 0
15:2/0 = 0
16:2/0 = 0
17:2/0 = 0
18:2/0 = 0
19:2/0 = 0
0:3/0 = 0
1:3/0 = 0
2:3/0 = 0
3:3/0 = 0
4:3/0 = 0
5:3/0 = 0
6:3/0 = 0
7:3/0 = 0
8:3/0 = 0
9:3/0 = 0
10:3/0 = 0
11:3/0 = 0
12:3/0 = 0
13:3/0 = 0
14:3/0 = 0
15:3/0 = 0
16:3/0 = 0
17:3/0 = 0
18:3/0 = 0
19:3/0 = 0
0:4/0 = 0
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
6:4/0 = 0
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
12:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
18:4/0 = 0
0:5/0 = 0
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
6:5/0 = 0
7:5/0 = 0
8:5/0 = 0
9:5/0 = 0
10:5/0 = 0
11:5/0 = 0
12:5/0 = 0
13:5/0 = 0
14:5/0 = 0
15:5/0 = 0
16:5/0 = 0
17:5/0 = 0
18:5/0 = 0
19:5/0 = 0
0:6/0 = 0
1:6/0 = 0
2:6/0 = 0
3:6/0 = 0
4:6/0 = 0
5:6/0 = 0
6:6/0 = 0
7:6/0 = 0
8:6/0 = 0
9:6/0 = 0
10:6/0 = 0
11:6/0 = 0
13:6/0 = 0
14:6/0 = 0
15:6/0 = 0
16:6/0 = 0
18:6/0 = 0
19:6/0 = 0

[sub_resource type="TileSet" id="TileSet_8u45t"]
sources/0 = SubResource("TileSetAtlasSource_clg3o")

[sub_resource type="FontVariation" id="FontVariation_l0mfl"]
base_font = ExtResource("2_4gdgl")
spacing_glyph = -8
spacing_space = 10

[sub_resource type="FontVariation" id="FontVariation_7doh5"]
base_font = ExtResource("2_4gdgl")
spacing_glyph = -6
spacing_space = 3

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ex6hl"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4lq78"]
bg_color = Color(0, 0, 0, 0.133333)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_247qo"]
bg_color = Color(0, 0, 0, 0.396078)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qwfix"]
bg_color = Color(0.6, 0.6, 0.6, 0)

[node name="KeyControls" type="ColorRect"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -147.0
offset_top = -83.0
offset_right = -1001.0
offset_bottom = -571.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.117647, 0.266667, 0.172549)
script = ExtResource("1_7awgc")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 5.0
offset_top = 4.0
offset_right = 293.0
offset_bottom = 156.0
color = Color(0.0156863, 0.176471, 0.231373, 0.752941)

[node name="player_1_keys" type="TileMap" parent="."]
position = Vector2(95, 51.72)
scale = Vector2(1.84, 1.84)
tile_set = SubResource("TileSet_8u45t")
format = 2
layer_0/tile_data = PackedInt32Array(65534, 131072, 4, 65535, 262144, 4, -65535, 196608, 3, 1, 196608, 4, 4, 327680, 4)

[node name="Controls" type="Label" parent="."]
modulate = Color(0.0117647, 1, 1, 1)
layout_mode = 0
offset_left = 4.0
offset_top = -26.0
offset_right = 159.0
offset_bottom = 31.0
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_l0mfl")
theme_override_font_sizes/font_size = 10
text = "Controls  (P1)"

[node name="Move" type="Label" parent="."]
layout_mode = 0
offset_left = 28.0
offset_top = 86.72
offset_right = 183.0
offset_bottom = 143.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Move"

[node name="Move2" type="Label" parent="."]
layout_mode = 0
offset_left = 211.0
offset_top = 86.72
offset_right = 366.0
offset_bottom = 143.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Shoot"

[node name="Move3" type="Label" parent="."]
layout_mode = 0
offset_left = 74.0
offset_top = 87.72
offset_right = 229.0
offset_bottom = 148.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Move
Gun
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_2_keys" type="TileMap" parent="."]
visible = false
position = Vector2(95, 51)
scale = Vector2(1.84, 1.84)
tile_set = SubResource("TileSet_8u45t")
format = 2
layer_0/tile_data = PackedInt32Array(65534, 524288, 4, 65535, 655360, 4, -65535, 589824, 3, 1, 589824, 4, 4, 720896, 4)

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_right = 297.0
offset_bottom = 158.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ex6hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lq78")
theme_override_styles/pressed = SubResource("StyleBoxFlat_247qo")
theme_override_styles/focus = SubResource("StyleBoxFlat_qwfix")

[node name="Player2" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 683.0
offset_top = 1.0
offset_right = 979.0
offset_bottom = 162.0
color = Color(0, 0.117647, 0.266667, 0.172549)

[node name="ColorRect" type="ColorRect" parent="Player2"]
offset_left = 5.0
offset_top = 4.0
offset_right = 293.0
offset_bottom = 156.0
color = Color(0.0156863, 0.176471, 0.231373, 0.752941)

[node name="player_1_keys" type="TileMap" parent="Player2"]
visible = false
position = Vector2(95, 51.72)
scale = Vector2(1.84, 1.84)
tile_set = SubResource("TileSet_8u45t")
format = 2
layer_0/tile_data = PackedInt32Array(65534, 131072, 4, 65535, 262144, 4, -65535, 196608, 3, 1, 196608, 4, 4, 327680, 4)

[node name="Controls" type="Label" parent="Player2"]
modulate = Color(1, 0, 0, 1)
offset_left = 4.0
offset_top = -26.0
offset_right = 159.0
offset_bottom = 31.0
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_l0mfl")
theme_override_font_sizes/font_size = 10
text = "Controls  (P2)"

[node name="Move" type="Label" parent="Player2"]
offset_left = 28.0
offset_top = 86.72
offset_right = 183.0
offset_bottom = 143.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Move"

[node name="Move2" type="Label" parent="Player2"]
offset_left = 211.0
offset_top = 86.72
offset_right = 366.0
offset_bottom = 143.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Shoot"

[node name="Move3" type="Label" parent="Player2"]
offset_left = 74.0
offset_top = 87.72
offset_right = 229.0
offset_bottom = 148.72
scale = Vector2(0.840315, 0.76)
theme_override_fonts/font = SubResource("FontVariation_7doh5")
theme_override_font_sizes/font_size = 8
text = "Move
Gun
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_2_keys" type="TileMap" parent="Player2"]
position = Vector2(95, 51)
scale = Vector2(1.84, 1.84)
tile_set = SubResource("TileSet_8u45t")
format = 2
layer_0/tile_data = PackedInt32Array(65534, 524288, 4, 65535, 655360, 4, -65535, 589824, 3, 1, 589824, 4, 4, 720896, 4)

[node name="Button" type="Button" parent="Player2"]
offset_right = 297.0
offset_bottom = 158.0
theme_override_styles/normal = SubResource("StyleBoxFlat_ex6hl")
theme_override_styles/hover = SubResource("StyleBoxFlat_4lq78")
theme_override_styles/pressed = SubResource("StyleBoxFlat_247qo")
theme_override_styles/focus = SubResource("StyleBoxFlat_qwfix")

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Player2/Button" to="." method="_on_button_pressed"]
